--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                 </div>
                 <div class="col-xl-7 d-flex align-items-center">
                   <div class="card-body">
-                    <h4 class="card-title">Eligendi omnis sunt veritatis.</h4>
+                    <h4 class="card-title">Descripcion I.</h4>
                     <p class="texto-justificado">Fuga in dolorum et iste et culpa. Commodi possimus nesciunt modi voluptatem placeat deleniti
                       adipisci. Cum delectus doloribus non veritatis. Officia temporibus illo magnam. Dolor eos             .</p>
                   </div>
@@ -208,7 +208,7 @@
                 </div>
                 <div class="col-xl-7 d-flex align-items-center">
                   <div class="card-body">
-                    <h4 class="card-title">Possimus ut sed velit assumenda</h4>
+                    <h4 class="card-title">Descripcion II</h4>
                     <p class="texto-justificado">Sunt deserunt maiores voluptatem autem est rerum perferendis rerum blanditiis. Est laboriosam qui
                       iste numquam laboriosam voluptatem architecto. Est laudantium sunt at quas aut hic. Eum
                       dignissimos.</p>
@@ -226,7 +226,7 @@
                 </div>
                 <div class="col-xl-7 d-flex align-items-center">
                   <div class="card-body">
-                    <h4 class="card-title">Error beatae dolor inventore aut</h4>
+                    <h4 class="card-title">Descripcion III</h4>
                     <p class="texto-justificado">Dicta porro nobis. Velit cum in. Nesciunt dignissimos enim molestiae facilis numquam quae quaerat
                       ipsam omnis. Neque debitis ipsum at architecto officia laboriosam odit. Ut sunt temporibus nulla
                       culpa.</p>
@@ -244,7 +244,7 @@
                 </div>
                 <div class="col-xl-7 d-flex align-items-center">
                   <div class="card-body">
-                    <h4 class="card-title">Expedita voluptas ut ut nesciunt</h4>
+                    <h4 class="card-title">Descripcion IV</h4>
                     <p class="texto-justificado">Aut est quidem doloremque voluptatem magnam quis excepturi vero quia. Eum eos doloremque
                       architecto illo at beatae dolore. Fugiat suscipit et sint ratione dolores. Aut aliquid ea dolores
                       libero nobis.</p>
@@ -264,9 +264,9 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-header">
-          <h2>Services</h2>
-          <p class="texto-justificado">Voluptatem quibusdam ut ullam perferendis repellat non ut consequuntur est eveniet deleniti fignissimos eos
-            quam</p>
+          <h2>Servicios</h2>
+          <!-- <p class="texto-justificado">Voluptatem quibusdam ut ullam perferendis repellat non ut consequuntur est eveniet deleniti fignissimos eos
+            quam</p> -->
         </div>
 
         <div class="row gy-4">
@@ -274,26 +274,31 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="service-item  position-relative">
               <div class="icon">
-                <i class="fa-solid fa-mountain-city"></i>
+                <i class="bi-currency-dollar"></i>
               </div>
-              <h3>Nesciunt Mete</h3>
-              <p class="texto-justificado">Provident nihil minus qui consequatur non omnis maiores. Eos accusantium minus dolores iure perferendis
-                tempore et consequatur.</p>
-              <a href="service-details.html" class="readmore stretched-link">Learn more <i
-                  class="bi bi-arrow-right"></i></a>
+              <h3>Venta e Instalación</h3>
+              <ul>
+              <li><p class="texto-justificado">Venta de unidades de aire acondicionado y sistemas de refrigeración para hogares, oficinas, comercios e industrias.</p></li>
+              <li><p class="texto-justificado">Instalacion profesional de aires acondicionados centrales, split, Ventana y sistemas de refrigeraciòn comercial e industrial</p></li>
+            </ul>
+              <!-- <a href="service-details.html" class="readmore stretched-link">Learn more <i
+                  class="bi bi-arrow-right"></i></a> -->
             </div>
           </div><!-- End Service Item -->
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
             <div class="service-item position-relative">
               <div class="icon">
-                <i class="fa-solid fa-arrow-up-from-ground-water"></i>
+                <i class="fa-solid bi-gear"></i>
               </div>
-              <h3>Eosle Commodi</h3>
-              <p class="texto-justificado">Ut autem aut autem non a. Sint sint sit facilis nam iusto sint. Libero corrupti neque eum hic non ut
-                nesciunt dolorem.</p>
-              <a href="service-details.html" class="readmore stretched-link">Learn more <i
-                  class="bi bi-arrow-right"></i></a>
+              <h3>Mantenimiento Preventivo</h3>
+             <ul>
+              <li><p class="texto-justificado">Programas de mantenimiento regular para asegurar el funcionamiento eficiente de los sistemas.</p></li>
+             <li><p class="texto-justificado">Limpieza y remplazo de filtros de aire.</p></li> 
+             <li><p class="texto-justificado">Inspección y limpieza de componentes internos y externos.</p></li> 
+            </ul>
+              <!-- <a href="service-details.html" class="readmore stretched-link">Learn more <i
+                  class="bi bi-arrow-right"></i></a> -->
             </div>
           </div><!-- End Service Item -->
 
@@ -302,11 +307,13 @@
               <div class="icon">
                 <i class="fa-solid fa-compass-drafting"></i>
               </div>
-              <h3>Ledo Markt</h3>
+              <h3>Reparacion y Servicio Tecnico</h3>
+              <ul>
               <p class="texto-justificado">Ut excepturi voluptatem nisi sed. Quidem fuga consequatur. Minus ea aut. Vel qui id voluptas adipisci
                 eos earum corrupti.</p>
-              <a href="service-details.html" class="readmore stretched-link">Learn more <i
-                  class="bi bi-arrow-right"></i></a>
+              </ul>  
+              <!-- <a href="service-details.html" class="readmore stretched-link">Learn more <i
+                  class="bi bi-arrow-right"></i></a> -->
             </div>
           </div><!-- End Service Item -->
 
@@ -315,11 +322,11 @@
               <div class="icon">
                 <i class="fa-solid fa-trowel-bricks"></i>
               </div>
-              <h3>Asperiores Commodit</h3>
+              <h3>Optimizaciòn de Eficiencia Energètica</h3>
               <p class="texto-justificado">Non et temporibus minus omnis sed dolor esse consequatur. Cupiditate sed error ea fuga sit provident
                 adipisci neque.</p>
-              <a href="service-details.html" class="readmore stretched-link">Learn more <i
-                  class="bi bi-arrow-right"></i></a>
+              <!-- <a href="service-details.html" class="readmore stretched-link">Learn more <i
+                  class="bi bi-arrow-right"></i></a> -->
             </div>
           </div><!-- End Service Item -->
 
@@ -328,11 +335,11 @@
               <div class="icon">
                 <i class="fa-solid fa-helmet-safety"></i>
               </div>
-              <h3>Velit Doloremque</h3>
+              <h3>Diseño y Consultoria</h3>
               <p class="texto-justificado">Cumque et suscipit saepe. Est maiores autem enim facilis ut aut ipsam corporis aut. Sed animi at autem
                 alias eius labore.</p>
-              <a href="service-details.html" class="readmore stretched-link">Learn more <i
-                  class="bi bi-arrow-right"></i></a>
+              <!-- <a href="service-details.html" class="readmore stretched-link">Learn more <i
+                  class="bi bi-arrow-right"></i></a> -->
             </div>
           </div><!-- End Service Item -->
 
@@ -341,11 +348,11 @@
               <div class="icon">
                 <i class="fa-solid fa-arrow-up-from-ground-water"></i>
               </div>
-              <h3>Dolori Architecto</h3>
+              <h3>Sistemas Especializados</h3>
               <p class="texto-justificado">Hic molestias ea quibusdam eos. Fugiat enim doloremque aut neque non et debitis iure. Corrupti
                 recusandae ducimus enim.</p>
-              <a href="service-details.html" class="readmore stretched-link">Learn more <i
-                  class="bi bi-arrow-right"></i></a>
+              <!-- <a href="service-details.html" class="readmore stretched-link">Learn more <i
+                  class="bi bi-arrow-right"></i></a> -->
             </div>
           </div><!-- End Service Item -->
 
@@ -354,60 +361,7 @@
       </div>
     </section><!-- End Services Section -->
 
-    <!-- ======= Alt Services Section ======= -->
-    <section id="alt-services" class="alt-services">
-      <div class="container" data-aos="fade-up">
 
-        <div class="row justify-content-around gy-4">
-          <div class="col-lg-6 img-bg" style="background-image: url(assets/img/alt-services.jpg);" data-aos="zoom-in"
-            data-aos-delay="100"></div>
-
-          <div class="col-lg-5 d-flex flex-column justify-content-center">
-            <h3>Enim quis est voluptatibus aliquid consequatur fugiat</h3>
-            <p class="texto-justificado">Esse voluptas cumque vel exercitationem. Reiciendis est hic accusamus. Non ipsam et sed minima temporibus
-              laudantium. Soluta voluptate sed facere corporis dolores excepturi</p>
-
-            <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="100">
-              <i class="bi bi-easel flex-shrink-0"></i>
-              <div>
-                <h4><a href="" class="stretched-link">Lorem Ipsum</a></h4>
-                <p class="texto-justificado">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate
-                  non provident</p>
-              </div>
-            </div><!-- End Icon Box -->
-
-            <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="200">
-              <i class="bi bi-patch-check flex-shrink-0"></i>
-              <div>
-                <h4><a href="" class="stretched-link">Nemo Enim</a></h4>
-                <p class="texto-justificado">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum
-                  deleniti atque</p>
-              </div>
-            </div><!-- End Icon Box -->
-
-            <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="300">
-              <i class="bi bi-brightness-high flex-shrink-0"></i>
-              <div>
-                <h4><a href="" class="stretched-link">Dine Pad</a></h4>
-                <p class="texto-justificado">Explicabo est voluptatum asperiores consequatur magnam. Et veritatis odit. Sunt aut deserunt minus
-                  aut eligendi omnis</p>
-              </div>
-            </div><!-- End Icon Box -->
-
-            <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="400">
-              <i class="bi bi-brightness-high flex-shrink-0"></i>
-              <div>
-                <h4><a href="" class="stretched-link">Tride clov</a></h4>
-                <p class="texto-justificado">Est voluptatem labore deleniti quis a delectus et. Saepe dolorem libero sit non aspernatur odit amet.
-                  Et eligendi</p>
-              </div>
-            </div><!-- End Icon Box -->
-
-          </div>
-        </div>
-
-      </div>
-    </section><!-- End Alt Services Section -->
 
     <!-- ======= Features Section ======= -->
     <section id="features" class="features section-bg">
