--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
     </section>
 
     <!-- ======= Constructions Section ======= -->
-    <section id="constructions" class="constructions">
+    <!-- <section id="constructions" class="constructions">
       <div class="container" data-aos="fade-up">
 
         <div class="section-header">
@@ -198,7 +198,7 @@
                 </div>
               </div>
             </div>
-          </div><!-- End Card Item -->
+          </div>
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <div class="card-item">
@@ -216,7 +216,7 @@
                 </div>
               </div>
             </div>
-          </div><!-- End Card Item -->
+          </div>
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="300">
             <div class="card-item">
@@ -234,7 +234,7 @@
                 </div>
               </div>
             </div>
-          </div><!-- End Card Item -->
+          </div>
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400">
             <div class="card-item">
@@ -252,12 +252,12 @@
                 </div>
               </div>
             </div>
-          </div><!-- End Card Item -->
+          </div>
 
         </div>
 
       </div>
-    </section><!-- End Constructions Section -->
+    </section> -->
 
     <!-- ======= Services Section ======= -->
     <section id="services" class="services section-bg">
@@ -305,12 +305,13 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
             <div class="service-item position-relative">
               <div class="icon">
-                <i class="fa-solid fa-compass-drafting"></i>
+                <i class="fa-solid bi-hammer"></i>
               </div>
               <h3>Reparacion y Servicio Tecnico</h3>
               <ul>
-              <p class="texto-justificado">Ut excepturi voluptatem nisi sed. Quidem fuga consequatur. Minus ea aut. Vel qui id voluptas adipisci
-                eos earum corrupti.</p>
+              <li><p class="texto-justificado">Diagnóstico y reparación de problemas en sistemas de aire acondicionado y refrigeración.</p></li>
+              <li><p class="texto-justificado">Reparación o reemplazo de compresores, ventiladores y otros componentes.</p></li>
+             <li><p class="texto-justificado">Servicios de emergencia lsa 24 hr para situacioes urgentes.</p></li>
               </ul>  
               <!-- <a href="service-details.html" class="readmore stretched-link">Learn more <i
                   class="bi bi-arrow-right"></i></a> -->
@@ -320,11 +321,14 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="400">
             <div class="service-item position-relative">
               <div class="icon">
-                <i class="fa-solid fa-trowel-bricks"></i>
+                <i class="fa-solid bi-lightning-charge-fill"></i>
               </div>
-              <h3>Optimizaciòn de Eficiencia Energètica</h3>
-              <p class="texto-justificado">Non et temporibus minus omnis sed dolor esse consequatur. Cupiditate sed error ea fuga sit provident
-                adipisci neque.</p>
+              <h3>Optimización de Eficiencia Energética</h3>
+              <ul>
+             <li><p class="texto-justificado">Evaluación de la eficiencia energética de los sistemas existentes.</p></li>
+             <li><p class="texto-justificado">Recomendaciones para la mejor eficiencia y reducir los costos de energía.</p></li>
+             <li><p class="texto-justificado">Actualización de sistemas antiguos para que sean más eficientes energéticamente.</p></li>
+            </ul>
               <!-- <a href="service-details.html" class="readmore stretched-link">Learn more <i
                   class="bi bi-arrow-right"></i></a> -->
             </div>
@@ -333,11 +337,13 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="500">
             <div class="service-item position-relative">
               <div class="icon">
-                <i class="fa-solid fa-helmet-safety"></i>
+                <i class="fa-solid bi-stickies-fill"></i>
               </div>
               <h3>Diseño y Consultoria</h3>
-              <p class="texto-justificado">Cumque et suscipit saepe. Est maiores autem enim facilis ut aut ipsam corporis aut. Sed animi at autem
-                alias eius labore.</p>
+              <ul>
+              <li><p class="texto-justificado">Diseño de sistemas de aire acondicionado y refrigeración personalizados para espacios específicos.</p></li>
+              <li><p class="texto-justificado">Consultoría en la selección del equipo adecuado para satisfacer las necesidades del cliente y el espacio disponible.</p></li>
+              </ul>
               <!-- <a href="service-details.html" class="readmore stretched-link">Learn more <i
                   class="bi bi-arrow-right"></i></a> -->
             </div>
@@ -346,11 +352,12 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="600">
             <div class="service-item position-relative">
               <div class="icon">
-                <i class="fa-solid fa-arrow-up-from-ground-water"></i>
+                <i class="fa-solid bi-fan"></i>
               </div>
-              <h3>Sistemas Especializados</h3>
-              <p class="texto-justificado">Hic molestias ea quibusdam eos. Fugiat enim doloremque aut neque non et debitis iure. Corrupti
-                recusandae ducimus enim.</p>
+              <h3>Sistemas Especiales</h3>
+              <ul>
+              <li><p class="texto-justificado">Instalación y mantenimiento de sistemas de aire acondicionado y refrigeración para aplicaciones especiales, como salas limpias, cámaras frigoríficas, y sistemas de refrigeración industrial.</p></li>
+            </ul>
               <!-- <a href="service-details.html" class="readmore stretched-link">Learn more <i
                   class="bi bi-arrow-right"></i></a> -->
             </div>
