--- a/about.html
+++ b/about.html
@@ -208,7 +208,7 @@
               <i class="bi bi-patch-check flex-shrink-0"></i>
               <div>
                 <h4><a href="" class="stretched-link">Visión</a></h4>
-                <p class="texto-justificado">Nos esforzamos por ser líderes en el mercado de aire acondicionado y sistemas de refrigeración, reconocidos por nuestra excelencia en productos y servicios. Nos visualizamos como una empresa global que impulsa la innovación en tecnologías de climatización, contribuyendo así a un mundo más cómodo y sostenible. Aspiramos a establecer relaciones a largo plazo con nuestros clientes, basadas en la confianza mutua y el respeto, y a ser un empleador preferido que fomente el crecimiento profesional y personal de nuestros empleados. Además, nos comprometemos a ser responsables con el medio ambiente, adoptando prácticas empresariales ecoamigables y promoviendo la conciencia ambiental en todas nuestras operaciones y productos.</p>
+                <p class="texto-justificado">Nos esforzamos por ser líderes en el mercado de aire acondicionado y sistemas de refrigeración, reconocidos por nuestra excelencia en productos y servicios. Nos visualizamos como una empresa que impulsa la innovación en tecnologías de climatización, contribuyendo así a un mundo más cómodo y sostenible. Aspiramos a establecer relaciones a largo plazo con nuestros clientes, basadas en la confianza mutua y el respeto, y a ser un empleador preferido que fomente el crecimiento profesional y personal de nuestros empleados. Además, nos comprometemos a ser responsables con el medio ambiente, adoptando prácticas empresariales ecoamigables y promoviendo la conciencia ambiental en todas nuestras operaciones y productos.</p>
               </div>
             </div>
 
