--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
               <h3>Venta e Instalación</h3>
               <ul>
               <li><p class="texto-justificado">Venta de unidades de aire acondicionado y sistemas de refrigeración para hogares, oficinas, comercios e industrias.</p></li>
-              <li><p class="texto-justificado">Instalacion profesional de aires acondicionados centrales, split, Ventana y sistemas de refrigeraciòn comercial e industrial</p></li>
+              <li><p class="texto-justificado">Instalación profesional de aires acondicionados centrales, split, ventana y sistemas de refrigeración comercial e industrial</p></li>
             </ul>
               <!-- <a href="service-details.html" class="readmore stretched-link">Learn more <i
                   class="bi bi-arrow-right"></i></a> -->
@@ -307,7 +307,7 @@
               <div class="icon">
                 <i class="fa-solid bi-hammer"></i>
               </div>
-              <h3>Reparacion y Servicio Tecnico</h3>
+              <h3>Reparación y Servicio Técnico</h3>
               <ul>
               <li><p class="texto-justificado">Diagnóstico y reparación de problemas en sistemas de aire acondicionado y refrigeración.</p></li>
               <li><p class="texto-justificado">Reparación o reemplazo de compresores, ventiladores y otros componentes.</p></li>
@@ -339,7 +339,7 @@
               <div class="icon">
                 <i class="fa-solid bi-stickies-fill"></i>
               </div>
-              <h3>Diseño y Consultoria</h3>
+              <h3>Diseño y Consultoría</h3>
               <ul>
               <li><p class="texto-justificado">Diseño de sistemas de aire acondicionado y refrigeración personalizados para espacios específicos.</p></li>
               <li><p class="texto-justificado">Consultoría en la selección del equipo adecuado para satisfacer las necesidades del cliente y el espacio disponible.</p></li>
