--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
 
 
     <!-- ======= Features Section ======= -->
-    <section id="features" class="features section-bg">
+    <!-- <section id="features" class="features section-bg">
       <div class="container" data-aos="fade-up">
 
         <ul class="nav nav-tabs row  g-2 d-flex">
@@ -380,24 +380,24 @@
             <a class="nav-link active show" data-bs-toggle="tab" data-bs-target="#tab-1">
               <h4>Modisit</h4>
             </a>
-          </li><!-- End tab nav item -->
+          </li>
 
           <li class="nav-item col-3">
             <a class="nav-link" data-bs-toggle="tab" data-bs-target="#tab-2">
               <h4>Praesenti</h4>
-            </a><!-- End tab nav item -->
+            </a>
 
           <li class="nav-item col-3">
             <a class="nav-link" data-bs-toggle="tab" data-bs-target="#tab-3">
               <h4>Explica</h4>
             </a>
-          </li><!-- End tab nav item -->
+          </li>
 
           <li class="nav-item col-3">
             <a class="nav-link" data-bs-toggle="tab" data-bs-target="#tab-4">
               <h4>Nostrum</h4>
             </a>
-          </li><!-- End tab nav item -->
+          </li>
 
         </ul>
 
@@ -425,7 +425,7 @@
                 <img src="assets/img/features-1.jpg" alt="" class="img-fluid">
               </div>
             </div>
-          </div><!-- End tab content item -->
+          </div>
 
           <div class="tab-pane" id="tab-2">
             <div class="row">
@@ -450,7 +450,7 @@
                 <img src="assets/img/features-2.jpg" alt="" class="img-fluid">
               </div>
             </div>
-          </div><!-- End tab content item -->
+          </div>
 
           <div class="tab-pane" id="tab-3">
             <div class="row">
@@ -472,7 +472,7 @@
                 <img src="assets/img/features-3.jpg" alt="" class="img-fluid">
               </div>
             </div>
-          </div><!-- End tab content item -->
+          </div>
 
           <div class="tab-pane" id="tab-4">
             <div class="row">
@@ -495,43 +495,42 @@
                 <img src="assets/img/features-4.jpg" alt="" class="img-fluid">
               </div>
             </div>
-          </div><!-- End tab content item -->
+          </div>
 
         </div>
 
       </div>
-    </section><!-- End Features Section -->
+    </section> -->
 
     <!-- ======= Our Projects Section ======= -->
     <section id="projects" class="projects">
       <div class="container" data-aos="fade-up">
 
         <div class="section-header">
-          <h2>Our Projects</h2>
-          <p class="texto-justificado">Consequatur libero assumenda est voluptatem est quidem illum et officia imilique qui vel architecto
-            accusamus fugit aut qui distinctio</p>
+          <h2>Nuestros Proyectos</h2>
+          <p class="texto-justificado">Ofrecer una combinación de estos servicios puede ayudar a una empresa de aires acondicionados y sistemas de refrigeración a establecer una reputación sólida y atraer a una clientela diversa. Además, mantenerse al día con las últimas tecnologías y prácticas ambientales también es crucial para el éxito a largo plazo en este campo.</p>
         </div>
 
         <div class="portfolio-isotope" data-portfolio-filter="*" data-portfolio-layout="masonry"
           data-portfolio-sort="original-order">
 
           <ul class="portfolio-flters" data-aos="fade-up" data-aos-delay="100">
-            <li data-filter="*" class="filter-active">All</li>
-            <li data-filter=".filter-remodeling">Remodeling</li>
-            <li data-filter=".filter-construction">Construction</li>
-            <li data-filter=".filter-repairs">Repairs</li>
-            <li data-filter=".filter-design">Design</li>
+            <li data-filter="*" class="filter-active">Todos</li>
+            <li data-filter=".filter-remodeling">Servicio 1</li>
+            <li data-filter=".filter-construction">Servicio 2</li>
+            <li data-filter=".filter-repairs">Servicio 3</li>
+            <li data-filter=".filter-design">Servicio 4</li>
           </ul><!-- End Projects Filters -->
 
           <div class="row gy-4 portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-remodeling">
               <div class="portfolio-content h-100">
-                <img src="assets/img/projects/remodeling-1.jpg" class="img-fluid" alt="">
+                <img src="img/aire-acondicionado-decoracion-interior.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Remodeling 1</h4>
+                  <h4>Aire acondicionado</h4>
                   <p class="texto-justificado">Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/projects/remodeling-1.jpg" title="Remodeling 1"
+                  <a href="img/aire-acondicionado-decoracion-interior.jpg" title="Remodeling 1"
                     data-gallery="portfolio-gallery-remodeling" class="glightbox preview-link"><i
                       class="bi bi-zoom-in"></i></a>
                   <a href="project-details.html" title="More Details" class="details-link"><i
@@ -542,11 +541,11 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-construction">
               <div class="portfolio-content h-100">
-                <img src="assets/img/projects/construction-1.jpg" class="img-fluid" alt="">
+                <img src="img/cerrar-bomba-calor-fuera-casa.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Construction 1</h4>
+                  <h4>Sistema de enfriamiento</h4>
                   <p class="texto-justificado">Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/projects/construction-1.jpg" title="Construction 1"
+                  <a href="img/cerrar-bomba-calor-fuera-casa.jpg" title="Construction 1"
                     data-gallery="portfolio-gallery-construction" class="glightbox preview-link"><i
                       class="bi bi-zoom-in"></i></a>
                   <a href="project-details.html" title="More Details" class="details-link"><i
@@ -557,11 +556,11 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-repairs">
               <div class="portfolio-content h-100">
-                <img src="assets/img/projects/repairs-1.jpg" class="img-fluid" alt="">
+                <img src="img/electrico.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Repairs 1</h4>
+                  <h4>Mantenimiento Preventivo y Correctivo</h4>
                   <p class="texto-justificado">Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/projects/repairs-1.jpg" title="Repairs 1" data-gallery="portfolio-gallery-repairs"
+                  <a href="img/electrico.jpg" title="Repairs 1" data-gallery="portfolio-gallery-repairs"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="project-details.html" title="More Details" class="details-link"><i
                       class="bi bi-link-45deg"></i></a>
@@ -711,7 +710,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-header">
-          <h2>Testimonials</h2>
+          <h2>Datos Interesantes</h2>
           <p class="texto-justificado">Quam sed id excepturi ccusantium dolorem ut quis dolores nisi llum nostrum enim velit qui ut et autem uia
             reprehenderit sunt deleniti</p>
         </div>
@@ -722,7 +721,7 @@
             <div class="swiper-slide">
               <div class="testimonial-wrap">
                 <div class="testimonial-item">
-                  <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
+                  <!-- <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt=""> -->
                   <h3>Saul Goodman</h3>
                   <h4>Ceo &amp; Founder</h4>
                   <div class="stars">
@@ -742,7 +741,7 @@
             <div class="swiper-slide">
               <div class="testimonial-wrap">
                 <div class="testimonial-item">
-                  <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
+                  <!-- <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt=""> -->
                   <h3>Sara Wilsson</h3>
                   <h4>Designer</h4>
                   <div class="stars">
@@ -762,7 +761,7 @@
             <div class="swiper-slide">
               <div class="testimonial-wrap">
                 <div class="testimonial-item">
-                  <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
+                  <!-- <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt=""> -->
                   <h3>Jena Karlis</h3>
                   <h4>Store Owner</h4>
                   <div class="stars">
@@ -782,7 +781,7 @@
             <div class="swiper-slide">
               <div class="testimonial-wrap">
                 <div class="testimonial-item">
-                  <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
+                  <!-- <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt=""> -->
                   <h3>Matt Brandon</h3>
                   <h4>Freelancer</h4>
                   <div class="stars">
@@ -802,7 +801,7 @@
             <div class="swiper-slide">
               <div class="testimonial-wrap">
                 <div class="testimonial-item">
-                  <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
+                  <!-- <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt=""> -->
                   <h3>John Larson</h3>
                   <h4>Entrepreneur</h4>
                   <div class="stars">
@@ -833,7 +832,7 @@
 
     
     
-  <div class=" section-header">
+  <!-- <div class=" section-header">
         <h2>Recent Blog Posts</h2>
         <p class="texto-justificado">In commodi voluptatem excepturi quaerat nihil error autem voluptate ut et officia consequuntu</p>
       </div>
@@ -870,7 +869,7 @@
             </div>
 
           </div>
-        </div><!-- End post item -->
+        </div>
 
         <div class="col-xl-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
           <div class="post-item position-relative h-100">
@@ -902,7 +901,7 @@
             </div>
 
           </div>
-        </div><!-- End post item -->
+        </div>
 
         <div class="col-xl-4 col-md-6">
           <div class="post-item position-relative h-100" data-aos="fade-up" data-aos-delay="300">
@@ -934,11 +933,11 @@
             </div>
 
           </div>
-        </div><!-- End post item -->
+        </div>
 
       </div>
 
-      </div>
+      </div> -->
     </section>
     <!-- End Recent Blog Posts Section -->
 
