--- a/index.html
+++ b/index.html
@@ -570,11 +570,11 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-design">
               <div class="portfolio-content h-100">
-                <img src="assets/img/projects/design-1.jpg" class="img-fluid" alt="">
+                <img src="img/encendidoaire.webp" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Design 1</h4>
+                  <h4>Venta de Sistemas Intelifentes de Aire Acondicionado</h4>
                   <p class="texto-justificado">Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/projects/design-1.jpg" title="Repairs 1" data-gallery="portfolio-gallery-book"
+                  <a href="img/encendidoaire.webp" title="Repairs 1" data-gallery="portfolio-gallery-book"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="project-details.html" title="More Details" class="details-link"><i
                       class="bi bi-link-45deg"></i></a>
@@ -584,11 +584,11 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-remodeling">
               <div class="portfolio-content h-100">
-                <img src="assets/img/projects/remodeling-2.jpg" class="img-fluid" alt="">
+                <img src="img/mujer-joven-tecnologia-casera.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Remodeling 2</h4>
+                  <h4>Encendido de  Aire acondicionado</h4>
                   <p class="texto-justificado">Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/projects/remodeling-2.jpg" title="Remodeling 2"
+                  <a href="img/mujer-joven-tecnologia-casera.jpg<" title="Remodeling 2"
                     data-gallery="portfolio-gallery-remodeling" class="glightbox preview-link"><i
                       class="bi bi-zoom-in"></i></a>
                   <a href="project-details.html" title="More Details" class="details-link"><i
