--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
               <div class="portfolio-content h-100">
                 <img src="img/mujer-joven-tecnologia-casera.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Encendido de  Aire acondicionado</h4>
+                  <h4>Encendido de  Aire Acondicionado</h4>
                   <p class="texto-justificado">Lorem ipsum, dolor sit amet consectetur</p>
                   <a href="img/mujer-joven-tecnologia-casera.jpg<" title="Remodeling 2"
                     data-gallery="portfolio-gallery-remodeling" class="glightbox preview-link"><i
