--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
               <div class="portfolio-content h-100">
                 <img src="img/mujer-joven-tecnologia-casera.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Encendido de  Aire Acondicionado</h4>
+                  <h4>Encendido de Aire Acondicionado</h4>
                   <p class="texto-justificado">Lorem ipsum, dolor sit amet consectetur</p>
                   <a href="img/mujer-joven-tecnologia-casera.jpg<" title="Remodeling 2"
                     data-gallery="portfolio-gallery-remodeling" class="glightbox preview-link"><i
@@ -599,11 +599,11 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-construction">
               <div class="portfolio-content h-100">
-                <img src="assets/img/projects/construction-2.jpg" class="img-fluid" alt="">
+                <img src="img/ventilacion.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Construction 2</h4>
+                  <h4>Ventilacion sobre restaurante</h4>
                   <p class="texto-justificado">Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/projects/construction-2.jpg" title="Construction 2"
+                  <a href="img/ventilacion.jpg " title="Construction 2"
                     data-gallery="portfolio-gallery-construction" class="glightbox preview-link"><i
                       class="bi bi-zoom-in"></i></a>
                   <a href="project-details.html" title="More Details" class="details-link"><i
@@ -614,11 +614,11 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-repairs">
               <div class="portfolio-content h-100">
-                <img src="assets/img/projects/repairs-2.jpg" class="img-fluid" alt="">
+                <img src="img/persona-que-trabaja-edificacion-construccion.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Repairs 2</h4>
+                  <h4>Inspecciones Continuas</h4>
                   <p class="texto-justificado">Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/projects/repairs-2.jpg" title="Repairs 2" data-gallery="portfolio-gallery-repairs"
+                  <a href="img/persona-que-trabaja-edificacion-construccion.jpg" title="Repairs 2" data-gallery="portfolio-gallery-repairs"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="project-details.html" title="More Details" class="details-link"><i
                       class="bi bi-link-45deg"></i></a>
@@ -628,11 +628,11 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-design">
               <div class="portfolio-content h-100">
-                <img src="assets/img/projects/design-2.jpg" class="img-fluid" alt="">
+                <img src="img/personas-tiro-medio-casco-trabajo.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Design 2</h4>
+                  <h4>Mantenimiento Corrrectivo y Preventivo</h4>
                   <p class="texto-justificado">Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/projects/design-2.jpg" title="Repairs 2" data-gallery="portfolio-gallery-book"
+                  <a href="img/personas-tiro-medio-casco-trabajo.jpg" title="Repairs 2" data-gallery="portfolio-gallery-book"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="project-details.html" title="More Details" class="details-link"><i
                       class="bi bi-link-45deg"></i></a>
@@ -642,11 +642,11 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-remodeling">
               <div class="portfolio-content h-100">
-                <img src="assets/img/projects/remodeling-3.jpg" class="img-fluid" alt="">
+                <img src="img/sistema-refrigeracion-activa-aire.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Remodeling 3</h4>
+                  <h4>Sistema de Refrigeracion Indutrial</h4>
                   <p class="texto-justificado">Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/projects/remodeling-3.jpg" title="Remodeling 3"
+                  <a href="img/sistema-refrigeracion-activa-aire.png" title="Remodeling 3"
                     data-gallery="portfolio-gallery-remodeling" class="glightbox preview-link"><i
                       class="bi bi-zoom-in"></i></a>
                   <a href="project-details.html" title="More Details" class="details-link"><i
