--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
 
       <div class="carousel-item active" style="background-image: url(img/mantenimiento-sistema.jpg)">
       </div>
-      <div class="carousel-item" style="background-image: url(assets/img/hero-carousel/hero-carousel-2.jpg)"></div>
+      <div class="carousel-item" style="background-image: url(img/Reparar-aire-acondicionado.jpg.webp)"></div>
       <div class="carousel-item" style="background-image: url(assets/img/hero-carousel/hero-carousel-3.jpg)"></div>
       <div class="carousel-item" style="background-image: url(assets/img/hero-carousel/hero-carousel-4.jpg)"></div>
-      <div class="carousel-item" style="background-image: url(assets/img/hero-carousel/hero-carousel-5.jpg)"></div>
+      <div class="carousel-item" style="background-image: url(img/testvalvulas.jpg)"></div>
 
       <a class="carousel-control-prev" href="#hero-carousel" role="button" data-bs-slide="prev">
         <span class="carousel-control-prev-icon bi bi-chevron-left" aria-hidden="true"></span>
@@ -125,7 +125,7 @@
 
         <div class="justify-content-between gy-4">
 
-          <div class="col-lg-8 d-flex align-items-center" data-aos="fade-up">
+          <div class="col-lg-10 d-flex align-items-center" data-aos="fade-up">
             <div class="content">
               <h3>Expertos en HVAC & R.</h3>
               <p class="texto-justificado">Considerados como los mejores dentro del ramo con mas de $ años de experiencia.</p>
@@ -644,7 +644,7 @@
               <div class="portfolio-content h-100">
                 <img src="img/sistema-refrigeracion-activa-aire.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Sistema de Refrigeracion Indutrial</h4>
+                  <h4>Sistema de Refrigeracion Industrial</h4>
                   <p class="texto-justificado">Lorem ipsum, dolor sit amet consectetur</p>
                   <a href="img/sistema-refrigeracion-activa-aire.png" title="Remodeling 3"
                     data-gallery="portfolio-gallery-remodeling" class="glightbox preview-link"><i
@@ -657,11 +657,11 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-construction">
               <div class="portfolio-content h-100">
-                <img src="assets/img/projects/construction-3.jpg" class="img-fluid" alt="">
+                <img src="img/sistrefri.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Construction 3</h4>
                   <p class="texto-justificado">Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/projects/construction-3.jpg" title="Construction 3"
+                  <a href="img/sistrefri.jpg" title="Construction 3"
                     data-gallery="portfolio-gallery-construction" class="glightbox preview-link"><i
                       class="bi bi-zoom-in"></i></a>
                   <a href="project-details.html" title="More Details" class="details-link"><i
