--- a/contact.html
+++ b/contact.html
@@ -157,7 +157,7 @@
                                   </div>
                                   <div class="col-sm-6">
                                       <div class="form-floating">
-                                          <input type="email" class="form-control border-0" name="correo" id="gmail" placeholder="Gurdian Email" required>
+                                          <input type="email" class="form-control border-0" name="correo" id="correo" placeholder="Gurdian Email" required>
                                           <label for="gmail">Correo</label>
                                       </div>
                                   </div>
